fix: prevent complete virtual thread starvation by migrating PassivePacketListener from virtual thread to platform thread